Revert "Bump kontrakter og bom (#2496)"
This reverts commit 041e89494dfe20ac50803d170c320af5562019f1.